# leapc

./: CMakeLists.txt  README.md  annotated.html  classes.html  days_8c_source.html  days_8h.html  days_8h__dep__incl.map  days_8h__dep__incl.md5  days_8h_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  is__leap__test_8c_source.html  leap_8c.html  leap_8c__incl.map  leap_8c__incl.md5  leap_8c_source.html  leap_8h.html  leap_8h__dep__incl.map  leap_8h__dep__incl.md5  leap_8h__incl.map  leap_8h__incl.md5  leap_8h_source.html  leap__abs__date__test_8c_source.html  leap__abs__from__test_8c_source.html  leap__date__test_8c_source.html  (+17 more)
.devcontainer/: devcontainer.json
.github/workflows/: doxygen.yml
inc/: leap.h  quo_mod.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js
src/: leap.c  quo_mod.c
tests/: days.c  days.h  diff_days.c  diff_days.h  is_leap_test.c  leap_abs_date_test.c  leap_abs_from_test.c  leap_absdate_test.c  leap_absfrom_test.c  leap_date_test.c  leap_day_test.c  leap_from_test.c  leap_off_test.c  leap_thru_test.c  mkdays.c  mkdays.h  quo_mod_test.c  year_test.c
